--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ Distributions = "0.21, 0.22"
 ElasticArrays = "1.0"
 EmpiricalDistributions = "0.1"
 FillArrays = "0.7, 0.8"
-IntervalSets = "0.3"
+IntervalSets = "0.3, 0.4"
 StatsBase = "0.32"
 Tables = "0.2"
 TypedTables = "1.2"
